--- a/.zpreztorc
+++ b/.zpreztorc
@@ -28,8 +28,8 @@ zstyle ':prezto:load' pmodule \
   'terminal' \
   'editor' \
   'git' \
-  'history' \
   'directory' \
+  'history' \
   'spectrum' \
   'utility' \
   'completion' \
@@ -40,7 +40,7 @@ zstyle ':prezto:load' pmodule \
 #
 
 # Set the key mapping style to 'emacs' or 'vi'.
-zstyle ':prezto:module:editor' key-bindings 'vi'
+#zstyle ':prezto:module:editor' key-bindings 'vi'
 
 # Auto convert .... to ../..
 # zstyle ':prezto:module:editor' dot-expansion 'yes'
@@ -64,13 +64,13 @@ zstyle ':prezto:module:git:status:ignore' submodules 'all'
 #
 
 # Set the query found color.
-# zstyle ':prezto:module:history-substring-search:color' found ''
+ zstyle ':prezto:module:history-substring-search:color' found ''
 
 # Set the query not found color.
-# zstyle ':prezto:module:history-substring-search:color' not-found ''
+ zstyle ':prezto:module:history-substring-search:color' not-found ''
 
 # Set the search globbing flags.
-# zstyle ':prezto:module:history-substring-search' globbing-flags ''
+ zstyle ':prezto:module:history-substring-search' globbing-flags ''
 
 #
 # Pacman
@@ -86,7 +86,7 @@ zstyle ':prezto:module:git:status:ignore' submodules 'all'
 # Set the prompt theme to load.
 # Setting it to 'random' loads a random theme.
 # Auto set to 'off' on dumb terminals.
-zstyle ':prezto:module:prompt' theme 'sorin'
+zstyle ':prezto:module:prompt' theme 'minimal'
 
 #
 # Ruby
